@@ -28,7 +28,7 @@
   mingw32-autotools.xml:2010090601
   mingw32-base.xml:2010071900
   mingw32-basic-bsdtar.xml:2010090600
-  mingw32-binutils.xml:2010121301
+  mingw32-binutils.xml:2011021600
   mingw32-bzip2.xml:2010090600
   mingw32-cygutils.xml:2010090600
   mingw32-expat.xml:2010052100
