@@ -22,6 +22,9 @@
       <licence tarname="binutils-%-mingw32-doc.tar" />
 
       <component class="bin">
+        <release tarname="binutils-2.21-3-mingw32-bin.tar.lzma" >
+          <requires eq="mingw32-libintl-*-mingw32-*-dll-8.tar" />
+        </release>
         <release tarname="binutils-2.21-2-mingw32-bin.tar.lzma" />
         <release tarname="binutils-2.20.51-1-mingw32-bin.tar.lzma" />
         <release tarname="binutils-2.20.1-2-mingw32-bin.tar.gz" />
@@ -30,10 +33,12 @@
       </component>
 
       <component class="doc">
+        <release tarname="binutils-2.21-3-mingw32-doc.tar.lzma" />
         <release tarname="binutils-2.21-2-mingw32-doc.tar.lzma" />
       </component>
 
       <component class="lang">
+        <release tarname="binutils-2.21-3-mingw32-lang.tar.lzma" />
         <release tarname="binutils-2.21-2-mingw32-lang.tar.lzma" />
       </component>
     </package>
